# EdgeWidthDetection

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  ConfigProject.bat  Folder.DotSettings
EdgeWidthDetection/: CMakeLists.txt
EdgeWidthDetection/include/DetachThread/: CameraAndCardStateThread.h  DetachDefectThreadProcess.h  DetachUtiltyThread.h
EdgeWidthDetection/include/Modules/: CameraModule.hpp  ConfigManagerModule.hpp  EliminateModule.hpp  IModule.hpp  ImgProModule.hpp  ImgSaveModule.hpp  Modules.hpp  PlcController.hpp  ReconnectModule.hpp  RuntimeInfoModule.hpp  TestModule.hpp  UIModule.hpp
EdgeWidthDetection/include/NoHardWare/: TestImgPushThread.hpp
EdgeWidthDetection/include/data/: Utilty.hpp  osoFIleUtiltyFunc.hpp
EdgeWidthDetection/include/func/: ImageProcessorModule.hpp
EdgeWidthDetection/include/ui/: CaiHuiPrintInspection.h  DlgProductSet.h  EdgeWidthDetection.h
EdgeWidthDetection/osoFile/: EdgeWidthDetection.oso  MaiLiDingZi.oso  SetConfig.oso
EdgeWidthDetection/osoInclude/: EdgeWidthDetection.hpp  MaiLiDingZi.hpp  SetConfig.hpp
EdgeWidthDetection/qrc/: QiXinShiJinDanXiangJi.qrc
EdgeWidthDetection/src/: main.cpp
EdgeWidthDetection/src/DetachThread/: CameraAndCardStateThread.cpp  DetachDefectThreadProcess.cpp  DetachUtiltyThread.cpp
EdgeWidthDetection/src/Modules/: CameraModule.cpp  ConfigManagerModule.cpp  EliminateModule.cpp  IModule.cpp  ImgProModule.cpp  ImgSaveModule.cpp  Modules.cpp  PlcController.cpp  ReconnectModule.cpp  RuntimeInfoModule.cpp  TestModule.cpp  UIModule.cpp
EdgeWidthDetection/src/NoHardWare/: TestImgPushThread.cpp
EdgeWidthDetection/src/data/: Utilty.cpp  osoFIleUtiltyFunc.cpp
EdgeWidthDetection/src/func/: ImageProcessorModule.cpp
EdgeWidthDetection/src/ui/: CaiHuiPrintInspection.cpp  DlgProductSet.cpp  EdgeWidthDetection.cpp
EdgeWidthDetection/ui/: CaiHuiPrintInspection.ui  DlgProductSet.ui  EdgeWidthDetection.ui
ThirdRep/: CMakeLists.txt
cmake/: CMakeCacheIni.cmake  ComplierIni.cmake  iniRW_UL.cmake
